--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,14 @@
-[package]
-name = "assistant"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = ["src/client", "src/service","src/protos"]
 
-[dependencies]
+[workspace.dependencies]
 reqwest = { version = "0.11", features = ["json"] }
 cpal = "0.14"
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 rodio = "0.15"
 ttrpc = "*"
-
-[build-dependencies]
 prost-build  = "*"
 ttrpc-codegen = "*"
+
+
