--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -10,3 +10,10 @@ ttrpc = {workspace =true, features = ["async"]}
 prost = {workspace = true}
 tokio = {workspace = true}
 async-trait = {workspace = true}
+serde = { workspace = true}
+serde_json = { workspace = true}
+
+
+
+toml = "0.8.19"
+reqwest = { version = "0.12", features = ["json"] }
