--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [workspace]
 # members = ["src/client", "src/service","src/protos"]
-members = ["src/protos", "src/service"]
+members = ["src/protos", "src/service","src/client"]
 [workspace.dependencies]
 reqwest = { version = "0.12", features = ["json"] }
 cpal = "0.15"
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 rodio = "0.20"
-ttrpc = "0.8.1"
+ttrpc = "0.8.4"
 prost-build  = "0.12"
 ttrpc-codegen = "0.5"
 thiserror = "2.0"
@@ -15,3 +15,4 @@ prost = { version = "0.12" }
 async-trait = "0.1"
 protobuf = "3.1.0"
 serde = { version = "1.0", features = ["derive"] }
+
