--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -14,6 +14,7 @@ serde = { workspace = true}
 serde_json = { workspace = true}
 
 
-
+log = "0.4.6"
+simple-logging = "2.0.2"
 toml = "0.8.19"
 reqwest = { version = "0.12", features = ["json"] }
