Init the design

--- a/src/protos/Cargo.toml
+++ b/src/protos/Cargo.toml
@@ -9,5 +9,5 @@ protobuf.workspace = true
 ttrpc= {workspace =true, features = ["async"]}
 
 [build-dependencies]
-prost-build  = { workspace = true } 
+# prost-build  = { workspace = true } 
 ttrpc-codegen = { workspace = true } 
