--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -18,4 +18,4 @@ sfifo = {git = "https://github.com/jokemanfire/sfifo"}
 log = "0.4.6"
 simple-logging = "2.0.2"
 toml = "0.8.19"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json","multipart"] }
