--- a/src/client/web/Cargo.toml
+++ b/src/client/web/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-warp = "0.3"
 tokio = {workspace = true}
 reqwest = {workspace = true}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = {workspace = true}
+actix-web = "4.0"
+chrono = "0.4"
+ttrpc = "0.7"
+protos = { path = "../../protos" }
+api = { path = "../api" }
