--- a/src/client/gui/Cargo.toml
+++ b/src/client/gui/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+eframe = "0.31"
+tokio = {workspace = true}
+reqwest = {workspace = true}
+serde = { version = "1.0", features = ["derive"] }
+serde_json = {workspace = true}
+ttrpc = {workspace =true, features = ["async"]}
+api = {path = "../api"}
