--- a/src/client/web/Cargo.toml
+++ b/src/client/web/Cargo.toml
@@ -10,6 +10,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = {workspace = true}
 actix-web = "4.0"
 chrono = "0.4"
-ttrpc = "0.7"
+ttrpc = {workspace =true, features = ["async"]}
 protos = { path = "../../protos" }
 api = { path = "../api" }
