--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 rodio = "0.20"
 ttrpc = "0.8.4"
-# prost-build  = "0.12"
+tonic-build = "0.12.3"
 ttrpc-codegen = "0.5"
 thiserror = "2.0"
 prost = { version = "0.12" }
