--- a/src/protos/Cargo.toml
+++ b/src/protos/Cargo.toml
@@ -11,3 +11,4 @@ ttrpc= {workspace =true, features = ["async"]}
 [build-dependencies]
 # prost-build  = { workspace = true } 
 ttrpc-codegen = { workspace = true } 
+tonic-build = { workspace = true }
