--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -19,3 +19,5 @@ log = "0.4.6"
 simple-logging = "2.0.2"
 toml = "0.8.19"
 reqwest = { version = "0.12", features = ["json","multipart"] }
+tonic = "0.12.3"
+env_logger = "0.11.5"
