--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -21,3 +21,10 @@ toml = "0.8.19"
 reqwest = { version = "0.12", features = ["json","multipart"] }
 tonic = "0.12.3"
 env_logger = "0.11.5"
+uuid = { version = "1.0", features = ["v4"] }
+anyhow = "1.0"
+config = "0.13"
+#wasmtime = "29.0"
+#wasmtime-wasi = "29.0"
+wasmedge-sdk = {version = "0.13.5-newapi", features = ["wasi_nn","async"]}
+#wasmedge-sys = "=0.19.0"
