--- a/src/service/src/default.toml
+++ b/src/service/src/default.toml
@@ -14,6 +14,13 @@ model_name= "Qwen/Qwen2.5-7B-Instruct"
 stream = true
 prompt_path= ""
 
+[local_model]
+enabled = true
+wasm_path = "./wasmedge-ggml-llama-stream.wasm"
+model_path = "./Meta-Llama-3-8B-Instruct.Q5_K_M.gguf"
+n_gpu_layers = 100
+ctx_size = 2048
+instance_count = 2
 
 [text_to_speech]
 model_path= ""
