--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -24,7 +24,8 @@ env_logger = "0.11.5"
 uuid = { version = "1.0", features = ["v4"] }
 anyhow = "1.0"
 config = "0.13"
+#wasm have some compile problem, so we don't use it
 #wasmtime = "29.0"
 #wasmtime-wasi = "29.0"
-wasmedge-sdk = {version = "0.13.5-newapi", features = ["wasi_nn","async"]}
+#wasmedge-sdk = {version = "0.13.5-newapi", features = ["wasi_nn","async"]}
 #wasmedge-sys = "=0.19.0"
