Add grpc max time
Signed-off-by: jokemanfire <hu.dingyang@zte.com.cn>

--- a/src/service/src/default.toml
+++ b/src/service/src/default.toml
@@ -1,6 +1,7 @@
 [server]
 ttrpc_addr = "unix:///tmp/ttrpc-test"
 grpc_addr = "0.0.0.0:50051"
+try_max_time = 3
 
 [remote_server]
 endpoints = ["http://0.0.0.0:50051"]
