--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -24,6 +24,8 @@ env_logger = "0.11.5"
 uuid = { version = "1.0", features = ["v4"] }
 anyhow = "1.0"
 config = "0.13"
+once_cell = "1.18.0"
+protobuf = "3.7.0"
 
 #wasm have some compile problem, so we don't use it
 #wasmtime = "29.0"
