--- a/src/client/gui/Cargo.toml
+++ b/src/client/gui/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = {workspace = true}
 ttrpc = {workspace =true, features = ["async"]}
 api = {path = "../api"}
+protos = {path = "../../protos"}
