--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "service"
+name = "assistant-service"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 protos = {path = "../protos"}
 thiserror = {workspace = true}
-ttrpc = {workspace =true, features = ["async"]}
 prost = {workspace = true}
 tokio = {workspace = true}
 async-trait = {workspace = true}
