--- a/src/service/src/default.toml
+++ b/src/service/src/default.toml
@@ -1,5 +1,4 @@
 [server]
-ttrpc_addr = "unix:///tmp/ttrpc-test"
 grpc_addr = "0.0.0.0:50051"
 try_max_time = 3
 
@@ -7,15 +6,15 @@ try_max_time = 3
 endpoints = ["http://0.0.0.0:50051"]
 timeout = 5000  # milliseconds
 
-[speech_to_text]
+[voice_chat]
 model_path= "https://api.siliconflow.cn/v1/audio/transcriptions"
 api_key = ""
 model_name = "FunAudioLLM/SenseVoiceSmall"
 
-[dialogue_model]
+[chat_model]
 knowledge_base = ""
 
-[[dialogue_model.remote_models]]
+[[chat_model.remote_models]]
 enabled = true
 priority = 3
 model_path = "https://api.siliconflow.cn/v1/chat/completions"
@@ -24,7 +23,7 @@ api_key= ""
 stream = true
 parameters = { temperature = "0.7", max_tokens = "2048" }
 
-[[dialogue_model.local_models]]
+[[chat_model.local_models]]
 enabled = true
 priority = 1
 wasm_path = "/path/to/wasme-ggml.wasm"
@@ -32,12 +31,8 @@ model_path = "/path/to/model.gguf"
 n_gpu_layers = 0
 ctx_size = 1024
 instance_count = 1
-model_type = "qwen"  # 或 "deepseek"
+model_type = "qwen"  # or "deepseek"
 stream = true
 
-
-
-
-
-[text_to_speech]
+[chat_voice]
 model_path= ""
