--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -25,6 +25,7 @@ anyhow = "1.0"
 config = "0.13"
 once_cell = "1.18.0"
 protobuf = "3.7.0"
+libc = "0.2"
 
 #wasm have some compile problem, so we don't use it
 #wasmtime = "29.0"
