--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["src/service","src/protos","wasme-ggml","src/client"]
+members = ["src/service","src/protos","wasme-ggml","src/client","src/plugins"]
 
 [workspace.dependencies]
 reqwest = { version = "0.12", features = ["json"] }
