--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -26,7 +26,11 @@ config = "0.13"
 once_cell = "1.18.0"
 protobuf = "3.7.0"
 libc = "0.2"
+assistant-plugins = {path = "../plugins", optional = true}
 
+[features]
+default = []
+http_api = ["reqwest/json", "assistant-plugins/http_api"]
 #wasm have some compile problem, so we don't use it
 #wasmtime = "29.0"
 #wasmtime-wasi = "29.0"
