--- a/src/client/Cargo.toml
+++ b/src/client/Cargo.toml
@@ -13,3 +13,7 @@ serde_json = "1.0"
 anyhow = "1.0"
 log = "0.4"
 env_logger = "0.11"
+uuid = { version = "1.0", features = ["v4"] }
+tokio-tungstenite = "0.20.1"
+futures-util = "0.3.28"
+url = "2.5.0"
