--- a/src/service/Cargo.toml
+++ b/src/service/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 protos = {path = "../protos"}
 thiserror = {workspace = true}
 prost = {workspace = true}
-tokio = {workspace = true}
+tokio = {workspace = true, features = ["full"]}
 async-trait = {workspace = true}
 serde = { workspace = true}
 serde_json = { workspace = true}
@@ -27,6 +27,10 @@ once_cell = "1.18.0"
 protobuf = "3.7.0"
 libc = "0.2"
 assistant-plugins = {path = "../plugins", optional = true}
+futures = "0.3.21"
+warp = "0.3.6"
+tokio-tungstenite = "0.20.1"
+futures-util = "0.3.28"
 
 [features]
 default = []
